tests/rosetta/transpiler/rb/earliest-difference-between-prime-gaps.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/rb/earliest-difference-between-prime-gaps.rb: /workspace/mochi/tests/rosetta/transpiler/rb/earliest-difference-between-prime-gaps.rb:57: dynamic constant assignment (SyntaxError)
    Data = Struct.new(:pm, :g1, :s1, ...
    ^~~~

